--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 			"WORKSPACE": "${containerWorkspaceFolder}"
 		}
 	},
-	//"remoteUser": "vscode",
+	"remoteUser": "dev",
 		"runArgs": [
 		"--network=host",
 		"--cap-add=SYS_PTRACE",
